[package]
name = "alienware"
version = "1.0.18"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "API to control the lights on an Alienware Alpha R1/R2"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/alienware-wmi/tree/main/alienware"
homepage = "https://github.com/a1ecbr0wn/alienware-wmi"
documentation = "https://docs.rs/alienware"
readme = "README.md"
keywords = ["alienware", "sysfs", "led"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.12.2"
