[package]
name = "alienware_cli"
version = "1.0.14"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "Command Line app to control the lights on an Alienware Alpha R1/R2"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/alienware-wmi/tree/main/alienware_cli"
homepage = "https://github.com/a1ecbr0wn/alienware-wmi"
readme = "README.md"
keywords = ["alienware", "sysfs", "led"]
categories = ["command-line-utilities", "hardware-support"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "alienware-cli"

[dependencies]
alienware = { path = "../alienware", version = "1.0.14" }
clap = { version = "4.5", features = ["derive"] }
jzon = "0.12.5"
regex = "1.11"
snapcraft = "0.4"
